--- a/app/src/main/res/layout/item_favorite_city.xml
+++ b/app/src/main/res/layout/item_favorite_city.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
+              android:background="?android:attr/selectableItemBackground"
               android:layout_height="88dp">
 
     <ImageView android:layout_width="88dp" android:layout_height="match_parent" android:id="@+id/city_icon"/>
